# piscine_cpp

./: .gitignore  CMakeLists.txt  Dockerfile  entry_script.sh  unitary_tests.sh
Module00/: Makefile
Module00/ex00/: Makefile  megaphone  megaphone.cpp
Module00/ex01/: Contact.cpp  Contact.hpp  Makefile  PhoneBook  main.cpp  phonebook  phonebook.cpp  phonebook.hpp
Module01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  randomChump.cpp
Module01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  zombieHorde.cpp
Module01/ex02/: Makefile  main.cpp
Module01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  a.out  main.cpp
Module01/ex04/: Makefile  main.cpp  replace  test  test.replace  test.sh
Module01/ex05/: Harl.cpp  Harl.hpp  Makefile  main.cpp
Module01/ex06/: Harl.cpp  Harl.hpp  Makefile  main.cpp
Module02/ex00/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
Module02/ex01/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
Module02/ex02/: Fixed.cpp  Fixed.hpp  Makefile
Module03/ex00/: ClapTrap.cpp  ClapTrap.hpp  Makefile  main.cpp
Module03/ex01/: ClapTrap.cpp  ClapTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
Module03/ex02/: ClapTrap.cpp  ClapTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  main.cpp
Module03/ex03/: ClapTrap.cpp  ClapTrap.hpp  DiamondTrap.cpp  DiamondTrap.h  DiamondTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  cdc.txt
Module04/ex00/: Animal.cpp  Animal.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  WrongAnimal.hpp  WrongCat.cpp  WrongCat.hpp  main.cpp
Module04/ex01/: Animal.cpp  Animal.hpp  Brain.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  main.cpp
Module04/ex02/: AAnimal.cpp  AAnimal.hpp  Brain.cpp  Brain.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  main.cpp
Module05/ex00/: Bureaucrat.cpp  Bureaucrat.hpp  Makefile  main.cpp
Module05/ex01/: Bureaucrat.cpp  Bureaucrat.hpp  Form.cpp  Form.hpp  Makefile  main.cpp
Module05/ex02/: AForm.cpp  AForm.hpp  Bureaucrat.cpp  Bureaucrat.hpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
Module05/ex03/: AForm.hpp  Intern.cpp  Intern.hpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
Module06/ex00/: Makefile  ScalarConverter.cpp  ScalarConverter.h  ScalarConverter.hpp  main.cpp
Module06/ex01/: Makefile  Serializer.cpp  Serializer.hpp  main.cpp
Module06/ex02/: Base.hpp  Makefile  main.cpp
Module07/ex00/: Makefile  main.cpp  whatever.hpp
Module07/ex01/: Makefile  iter.hpp  main.cpp
Module07/ex02/: Array.hpp  Makefile  main.cpp
Module08/ex00/: Makefile  easyfind.hpp  main.cpp
Module08/ex01/: Makefile  Span.cpp  Span.hpp  main.cpp
Module08/ex02/: Makefile  MutantStack.hpp  main.cpp
Module09/ex00/: BitcoinExchange.cpp  BitcoinExchange.hpp  Makefile  main.cpp
Module09/ex01/: Makefile  main.cpp
Module09/ex02/: Makefile  PmergeMe  main.cpp
