cmake_minimum_required(VERSION 3.24)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(00_00 Module00/ex00/megaphone.cpp)
add_executable(00_01 Module00/ex01/main.cpp Module00/ex01/PhoneBook.cpp Module00/ex01/PhoneBook.hpp Module00/ex01/Contact.cpp Module00/ex01/Contact.hpp)
add_executable(01_00 "Module01/ex00/Zombie.cpp" "Module01/ex00/Zombie.hpp" "Module01/ex00/newZombie.cpp" "Module01/ex00/randomChump.cpp" "Module01/ex00/main.cpp" Module04/ex00/WrongCat.hpp Module05/ex02/Bureaucrat.cpp)
add_executable(01_01 "Module01/ex01/Zombie.cpp" "Module01/ex01/zombieHorde.cpp" "Module01/ex01/main.cpp" Module00/ex01/Contact.cpp Module00/ex01/Contact.hpp)
add_executable(01_02 "Module01/ex02/main.cpp")
add_executable(01_03 "Module01/ex03/main.cpp" Module01/ex03/Weapon.cpp Module01/ex03/Weapon.hpp Module01/ex03/HumanA.hpp Module01/ex03/HumanA.cpp Module01/ex03/HumanB.cpp)
add_executable(01_04 Module01/ex04/main.cpp)
add_executable(01_05 Module01/ex05/main.cpp Module01/ex05/Harl.hpp Module01/ex05/Harl.cpp)
add_executable(02_00 Module02/ex00/main.cpp Module02/ex00/Fixed.cpp Module02/ex00/Fixed.hpp)
add_executable(02_01 Module02/ex01/main.cpp Module02/ex01/Fixed.cpp Module02/ex01/Fixed.hpp)
add_executable(02_02 Module02/ex02/main.cpp Module02/ex02/Fixed.cpp Module02/ex02/Fixed.hpp)
add_executable(03_00 Module03/ex00/main.cpp Module03/ex00/main.cpp Module03/ex00/ClapTrap.cpp Module03/ex00/ClapTrap.hpp)
add_executable(03_01 Module03/ex01/main.cpp Module03/ex01/ClapTrap.cpp Module03/ex01/ClapTrap.hpp Module03/ex01/ScavTrap.hpp Module03/ex01/ScavTrap.cpp)
add_executable(03_02 Module03/ex02/main.cpp Module03/ex02/ClapTrap.cpp Module03/ex02/ClapTrap.hpp Module03/ex02/FragTrap.hpp Module03/ex02/FragTrap.cpp)
add_executable(04_00 Module04/ex00/Animal.cpp Module04/ex00/Animal.hpp Module04/ex00/Dog.hpp Module04/ex00/Dog.cpp Module04/ex00/Cat.hpp Module04/ex00/Cat.cpp Module04/ex00/main.cpp Module04/ex00/WrongAnimal.hpp Module04/ex00/WrongAnimal.cpp Module04/ex00/WrongCat.hpp Module04/ex00/WrongCat.cpp)
add_executable(04_01 Module04/ex01/main.cpp Module04/ex01/Animal.cpp Module04/ex01/Animal.hpp Module04/ex01/Dog.hpp Module04/ex01/Dog.cpp Module04/ex01/Cat.hpp Module04/ex01/Cat.cpp Module04/ex01/Brain.hpp Module04/ex01/Brain.cpp)
add_executable(04_02 Module04/ex02/main.cpp Module04/ex02/Dog.hpp Module04/ex02/Dog.cpp Module04/ex02/Cat.hpp Module04/ex02/Cat.cpp Module04/ex02/Brain.hpp Module04/ex02/Brain.cpp Module04/ex02/AAnimal.hpp Module04/ex02/AAnimal.cpp)
add_executable(05_00 Module05/ex00/main.cpp Module05/ex00/Bureaucrat.hpp Module05/ex00/Bureaucrat.cpp)
add_executable(05_01 Module05/ex01/Bureaucrat.cpp Module05/ex01/Form.cpp Module05/ex01/Form.hpp Module05/ex01/main.cpp)
add_executable(05_02 Module05/ex02/main.cpp Module05/ex02/Bureaucrat.cpp Module05/ex02/AForm.cpp)
